--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
                             <div class="actions">
                               <a href="#" class="card-link">Ver más</a>
                             </div>
-                          </div>
+                        </div>
                     </div>
                     
                     <div class="card">
@@ -763,11 +763,17 @@
                <!--REMPLAZA ACORDEONES-->
                             
     <!--DATEPICKER-->
-    <div class="datos-picker">
+    <div class="datos-picker" style="float: left;">
         <!--<input class="datepicker" width="150" />-->
         <input class="timepicker" width="130" />
     </div>
 
+    <select class="form-control col-5" style="float: right;">
+        <option>Visita Efectiva</option>
+        <option>Vacaciones</option>
+        <option>Congreso</option>
+      </select>
+<div class="clearfix"></div>
  <br>
   <hr>
 
