--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <body class="horizontal-nav skin-megna-dark fixed-layout" style="padding-bottom: 25px;">
 
-    <!--<button id="botonm1" type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal2">Modal1</button>-->
+    <button id="botonm1" type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal2">Modal1</button>
 
     <div class="preloader">
         <div class="loader">
