--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     
     <div id="main-wrapper">
         
-        <aside class="left-sidebar">
+        <aside class="left-sidebar" style="display:none;">
             <div class="nav-text-box align-items-center d-md-none">
 
                 <a class="nav-lock waves-effect waves-dark ml-auto hidden-md-down" href="javascript:void(0)"><i class="fas fa-circle"></i></a>
