--- a/index.html
+++ b/index.html
@@ -238,13 +238,7 @@
 
                                                         <br><br>
                                                         <div id="calendar-events" class="" style="height: 338px;margin-top: 5px;">
-                                                            <div class="calendar-events" style="width:245px; font-size: 13px;" data-class="bg-success"><img src="assets/images/m-general.jpg" style="max-width: 32px;border-radius: 100%;margin-right: 10px;vertical-align: middle;">NORA ALVARADO <span style="margin-left: 10px;color: black; font-weight: 600;     border: 2px solid #17a2b8;
-    padding: 2px 8px 3px;
-    border-radius: 5px;
-    /* display: flex; */
-    /* justify-content: center; */
-    /* align-items: center; */
-    color: #17a2b8;"></span></div>
+                                                            <div class="calendar-events" style="width:245px; font-size: 13px;" data-class="bg-success"><img src="assets/images/m-general.jpg" style="max-width: 32px;border-radius: 100%;margin-right: 10px;vertical-align: middle;">NORA ALVARADO <span style="margin-left: 10px;color: black; font-weight: 600; "></span></div>
                                                             <div class="calendar-events" style="width:245px; font-size: 13px;" data-class="bg-success"><img src="assets/images/m-general.jpg" style="max-width: 32px;border-radius: 100%;margin-right: 10px;vertical-align: middle;">DEMETRIO ANCHANTE <span style="margin-left: 10px;color: black; font-weight: 600;     border: 2px solid #17a2b8;
     padding: 2px 8px 3px;
     border-radius: 5px;
@@ -252,13 +246,7 @@
     /* justify-content: center; */
     /* align-items: center; */
     color: #17a2b8;">1/2</span></div>
-                                                            <div class="calendar-events" style="width:245px; font-size: 13px;" data-class="bg-success"><img src="assets/images/m-general.jpg" style="max-width: 32px;border-radius: 100%;margin-right: 10px;vertical-align: middle;">JEAN CRIADO <span style="margin-left: 10px;color: black; font-weight: 600;     border: 2px solid #17a2b8;
-    padding: 2px 8px 3px;
-    border-radius: 5px;
-    /* display: flex; */
-    /* justify-content: center; */
-    /* align-items: center; */
-    color: #17a2b8;"></span></div>
+                                                            <div class="calendar-events" style="width:245px; font-size: 13px;" data-class="bg-success"><img src="assets/images/m-general.jpg" style="max-width: 32px;border-radius: 100%;margin-right: 10px;vertical-align: middle;">JEAN CRIADO <span style="margin-left: 10px;color: black; font-weight: 600; "></span></div>
                                                             <div class="calendar-events" style="width:245px; font-size: 13px;" data-class="bg-success"><img src="assets/images/m-general.jpg" style="max-width: 32px;border-radius: 100%;margin-right: 10px;vertical-align: middle;">VICTOR MATEO <span style="margin-left: 10px;color: black; font-weight: 600;     border: 2px solid #17a2b8;
     padding: 2px 8px 3px;
     border-radius: 5px;
@@ -274,13 +262,7 @@
     /* align-items: center; */
     color: #17a2b8;">2/3</span></div>
 
-                                                            <div class="calendar-events" style="width:245px; font-size: 13px;" data-class="bg-success"><img src="assets/images/m-general.jpg" style="max-width: 32px;border-radius: 100%;margin-right: 10px;vertical-align: middle;">ELSA ZEGARRA <span style="margin-left: 10px;color: black; font-weight: 600;     border: 2px solid #17a2b8;
-    padding: 2px 8px 3px;
-    border-radius: 5px;
-    /* display: flex; */
-    /* justify-content: center; */
-    /* align-items: center; */
-    color: #17a2b8;"></span></div>
+                                                            <div class="calendar-events" style="width:245px; font-size: 13px;" data-class="bg-success"><img src="assets/images/m-general.jpg" style="max-width: 32px;border-radius: 100%;margin-right: 10px;vertical-align: middle;">ELSA ZEGARRA <span style="margin-left: 10px;color: black; font-weight: 600; "></span></div>
                                                         </div>
                                                     </div>
 
