--- a/index.html
+++ b/index.html
@@ -254,13 +254,13 @@
     /* justify-content: center; */
     /* align-items: center; */
     color: #17a2b8;">1/2</span></div>
-                                                            <div class="calendar-events" style="width:245px; font-size: 13px;" data-class="bg-success"><img src="assets/images/m-general.jpg" style="max-width: 32px;border-radius: 100%;margin-right: 10px;vertical-align: middle;">RODOLFO SUAREZ <span style="margin-left: 10px;color: black; font-weight: 600;     border: 2px solid #17a2b8;
+                                                            <div class="calendar-events" style="width:245px; font-size: 13px;" data-class="bg-success"><img src="assets/images/m-general.jpg" style="max-width: 32px;border-radius: 100%;margin-right: 10px;vertical-align: middle;">RODOLFO SUAREZ <span style="margin-left: 10px;color: black; font-weight: 600;     border: 2px solid #dc3545;
     padding: 2px 8px 3px;
     border-radius: 5px;
     /* display: flex; */
     /* justify-content: center; */
     /* align-items: center; */
-    color: #17a2b8;">2/3</span></div>
+    color: #dc3545;">0/1</span></div>
 
                                                             <div class="calendar-events" style="width:245px; font-size: 13px;" data-class="bg-success"><img src="assets/images/m-general.jpg" style="max-width: 32px;border-radius: 100%;margin-right: 10px;vertical-align: middle;">ELSA ZEGARRA <span style="margin-left: 10px;color: black; font-weight: 600; "></span></div>
                                                         </div>
