--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                                                     <span class="" data-toggle="tooltip" data-placement="bottom" data-html="true" title="Contactos Visitados en todo el Ciclo." style="cursor: pointer;">3</span>
                                                 </div>
 
-                                                <button class="historico" data-toggle="modal" data-target=".bd-example-modal-lg"><i class="far fa-list-alt"></i> Histórico</button>
+                                                <button class="historico" data-toggle="modal" data-target=".bd-example-modal-lg"><i class="far fa-list-alt"></i> Histórico del Ciclo</button>
 
                                             <div class="clearfix bajado"></div>
                                             <div class="filtros-bg">
